--- a/app/src/main/res/layout/dichvu_activity.xml
+++ b/app/src/main/res/layout/dichvu_activity.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     >
 <!-- map -->
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/myMap"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        tools:context=".Map_api"
-        android:layout_height="match_parent">
-    </fragment>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        tools:context=".Map_api"></fragment>
 <!-- thanh menu ben duoi -->
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationViewNearby"
