--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/menucanhan" android:icon="@drawable/ic_canhan" android:title="Cá Nhân"></item>
     <item android:id="@+id/menudangnhap" android:icon="@drawable/ic_dangnhap"
         android:title="@string/dangnhap"/>
     <item android:id="@+id/menutrangchu" android:title="@string/trangchu"
@@ -11,8 +12,8 @@
          android:title="@string/timkiemnangcao"
         android:icon="@drawable/ic_timkiemnangcao"/>
 
-    <item android:id="@+id/menuvitrihientai" android:icon="@drawable/ic_vitrihientai"
-        android:title="@string/vitrihientai"/>
+    <item android:id="@+id/Map" android:icon="@drawable/ic_map"
+        android:title="@string/map"/>
     <item android:id="@+id/menungonngu" android:icon="@drawable/ic_ngonngu"
         android:title="@string/ngonngu"/>
     <item android:id="@+id/menudiadiemyeuthich" android:icon="@drawable/ic_diadiemyeuthich"
