--- a/app/src/main/res/layout/activity_chi_tiet.xml
+++ b/app/src/main/res/layout/activity_chi_tiet.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ActivityChiTiet"
     android:orientation="vertical"
-    android:background="#ffff">
+    android:background="#F3F5F2">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
