--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -11,83 +11,89 @@
         android:layout_height="170dp"
         android:layout_marginRight="3dp"
         android:background="#a127bf"/>
-<LinearLayout
-    android:orientation="vertical"
-
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/txt_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="thoi tiet ngay"/>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView
-        android:id="@+id/txt_nhietdo"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:textSize="25sp"
-        android:layout_height="wrap_content"
-        android:text="max/min"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26dp"
-        android:layout_marginLeft="3dp"
-        android:text="°C"/>
-</LinearLayout>
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="6dp"
-    android:orientation="horizontal">
     <LinearLayout
+        android:orientation="vertical"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginRight="3dp"
-        android:gravity="center">
+        android:background="#DBF599">
         <TextView
+            android:id="@+id/txt_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:text="Ngày"/>
-        <ImageView
-            android:id="@+id/iconDay_weather"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/bien"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_marginLeft="3dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
-        <TextView
+            android:textSize="20sp"
+            android:text="thoi tiet ngay"
+            android:textColor="#111010"/>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:text="Đêm"/>
-        <ImageView
-            android:id="@+id/iconNight_weather"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/txt_nhietdo"
+                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
+                android:textSize="25sp"
+                android:layout_height="wrap_content"
+                android:text="max/min"
+                android:textColor="#111010"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="26dp"
+                android:layout_marginLeft="3dp"
+                android:text="T°C"
+                android:textColor="#111010"/>
+        </LinearLayout>
 
-            android:src="@drawable/bien"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginRight="3dp"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="22sp"
+                    android:text="NgÃ y"
+                    android:textColor="#111010"/>
+                <ImageView
+                    android:id="@+id/iconDay_weather"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/bien"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginLeft="3dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="22sp"
+                    android:text="ÄÃªm"
+                    android:textColor="#111010"/>
+                <ImageView
+                    android:id="@+id/iconNight_weather"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+
+                    android:src="@drawable/bien"/>
+            </LinearLayout>
+        </LinearLayout>
+        <TextView
+            android:layout_marginTop="2dp"
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:background="@color/colorbackgroundbutton"
+            />
     </LinearLayout>
-</LinearLayout>
-    <TextView
-        android:layout_marginTop="2dp"
-        android:layout_width="100dp"
-        android:layout_height="1dp"
-        android:background="@color/colorbackgroundbutton"
-        />
-</LinearLayout>
 
 </LinearLayout>
